--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
       <a href="../portfolio/index.html" class="navlink current">Home</a>
-      <a href="../portfolio/projects.html" class="navlink">Projects</a>
+      <a href="../projects.html" class="navlink">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
