--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../portfolio/index.html" class="navlink current">Home</a>
+      <a href="../index.html" class="navlink current">Home</a>
       <a href="../projects.html" class="navlink">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
@@ -50,7 +50,7 @@
 
       <a href="mailto:agraffo23@gmail.com">AGRAFFO23@GMAIL.COM</a><br><br>
 
-      <a href="../portfolio/CV_Andres_Garcia.pdf">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
+      <a href="../CV_Andres_Garcia.pdf">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
     </div>
     <!-- LOOPING TEXT -->
     <div class="container w100 m60">
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="line w77 m25"></div>
-      <div class="desc w15" style="margin-top: 12.5px;">SEE WHAT I DID, HERE <a href="../portfolio/projects.html"><i class="fa-solid fa-plus"></i></a></div>
+      <div class="desc w15" style="margin-top: 12.5px;">SEE WHAT I DID, HERE <a href="../projects.html"><i class="fa-solid fa-plus"></i></a></div>
     </div>
   </div>
   <div class="footer">
