--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../portfolio/index.html" class="navlink">Home</a>
-      <a href="../portfolio/projects.html" class="navlink current">Projects</a>
+      <a href="../index.html" class="navlink">Home</a>
+      <a href="../projects.html" class="navlink current">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
@@ -44,7 +44,7 @@
     <div class="section projects w50 h80">
       <div class="container universal show">
         <div class="line w45" style="margin-right: 3.5vw"></div>
-        <a href="../portfolio/universal.pdf" target="_blank" class="frow w45">
+        <a href="../universal.pdf" target="_blank" class="frow w45">
           <h3>TROLLS BAND TOGETHER & THE EXORCIST BELIEVER</h3>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
