--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../index.html" class="navlink current">Home</a>
-      <a href="../projects.html" class="navlink">Projects</a>
+      <a href="../" class="navlink current">Home</a>
+      <a href="../projects" class="navlink">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
@@ -50,7 +50,7 @@
 
       <a href="mailto:agraffo23@gmail.com">AGRAFFO23@GMAIL.COM</a><br><br>
 
-      <a href="../CV_Andres_Garcia.pdf">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
+      <a href="../CV_Andres_Garcia.pdf" target="_blank">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
     </div>
     <!-- LOOPING TEXT -->
     <div class="container w100 m60">
