--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../index.html" class="navlink">Home</a>
-      <a href="../projects.html" class="navlink current">Projects</a>
+      <a href="../" class="navlink">Home</a>
+      <a href="../projects" class="navlink current">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
