--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <title>Andres Garcia Raffo</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- JQUERY -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <!-- CSS -->
