--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <title>Andres Garcia Raffo</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- CSS -->
     <link href="css/index.css" rel="stylesheet">
     <!-- FONTS -->
