--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Projects - Andres Garcia Raffo</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <!-- JQUERY -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <!-- CSS -->
