--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
 	<!-- IDK WHAT IT DOES EXACTLY -->
+	<link rel="icon" href="favicon.ico">
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Andres Garcia Raffo</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
     <link href="css/index.css" rel="stylesheet">
     <!-- FONTS -->
