--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-	<!-- IDK WHAT IT DOES EXACTLY -->
-	<link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -24,7 +23,7 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../" class="navlink current">Home</a>
+      <a href="/" class="navlink current">Home</a>
       <a href="../projects" class="navlink">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
@@ -52,7 +51,7 @@
 
       <a href="mailto:agraffo23@gmail.com">AGRAFFO23@GMAIL.COM</a><br><br>
 
-      <a href="../CV_Andres_Garcia.pdf" target="_blank">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
+      <a href="../CV_Andres_Garcia.pdf">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
     </div>
     <!-- LOOPING TEXT -->
     <div class="container w100 m60">
@@ -103,7 +102,7 @@
         </div>
       </div>
       <div class="line w77 m25"></div>
-      <div class="desc w15" style="margin-top: 12.5px;">SEE WHAT I DID, HERE <a href="../projects.html"><i class="fa-solid fa-plus"></i></a></div>
+      <div class="desc w15" style="margin-top: 12.5px;"><a href="../portfolio/projects.html">PROJECTS <i class="fa-solid fa-plus"></i></a></div>
     </div>
   </div>
   <div class="footer">
