--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
 <head>
 	<!-- IDK WHAT IT DOES EXACTLY -->
 	<meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Projects - Andres Garcia Raffo</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <!-- JQUERY -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <!-- CSS -->
@@ -26,7 +26,7 @@
 <body>
   <div id="navbar" class="w100 p03">
     <div class="navlinks">
-      <a href="../" class="navlink">Home</a>
+      <a href="/" class="navlink">Home</a>
       <a href="../projects" class="navlink current">Projects</a>
       <a href="#" class="navlink" style="display: none;">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
@@ -52,8 +52,8 @@
         </a>
         <div class="w45">Development of a Digital Marketing Plan for the upcoming movies: Trolls Band Together & The Exorcist Believer by Universal Pictures. For each movie, two digital marketing campaigns were designed, targeting different audiences, with a focus in the Spanish market.</div>
         <div class="skills w45">
-          <span>Digital Marketing</span>
           <span>Creative Strategy</span>
+          <span>Digital Marketing</span>
           <span>PowerPoint</span>
         </div>
       </div>
@@ -64,6 +64,11 @@
           <i class="fa-solid fa-arrow-right"></i>
         </a>
         <div class="w45">Crafted the Business Development Plan for INTI & Co., a social enterprise aiming to bring Peru to the world by making sustainable fashion. The plan includes the brand identity, and a marketing and sales plan.</div>
+        <div class="skills w45">
+          <span>Brand Development</span>
+          <span>Sales Planning</span>
+          <span>Web Design (WordPress, CSS & HTML)</span>
+        </div>
       </div>
       <div class="container hub m25">
         <div class="line w45" style="margin-right: 3.5vw"></div>
@@ -72,6 +77,11 @@
           <i class="fa-solid fa-arrow-right"></i>
         </a>
         <div class="w45">EDUCATION HUB is the go-to digital platform that connects universities and businesses, with the students at its core. The objective is to ensure a smooth transition between graduation and the labour market.</div>
+        <div class="skills w45">
+          <span>Business Development</span>
+          <span>Data Analysis</span>
+          <span>Market Research</span>
+        </div>
       </div>
       <div class="container royal m25">
         <div class="line w45" style="margin-right: 3.5vw"></div>
@@ -80,6 +90,10 @@
           <i class="fa-solid fa-arrow-right"></i>
         </a>
         <div class="w45">Website mock-up for The Royal Family Films, a creative production company based in Madrid. The goal was to simplify the image of the brand and enhance the accessibility to their work.<br><br>Find them at: https://royalproductioncompany.com/</div>
+        <div class="skills w45">
+          <span>Web Design (Adobe XD)</span>
+          <span>User Interface</span>
+        </div>
       </div>
     </div>
   </div>
