--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
           <h3>TROLLS BAND TOGETHER & THE EXORCIST BELIEVER</h3>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
-        <div class="w45">Development of a Digital Marketing Plan for the upcoming movies: Trolls Band Together & The Exorcist Believer by Universal Pictures. For each movie, two digital marketing campaigns were designed, targeting different audiences, with a focus in the Spanish market.</div>
+        <div class="dsc w45">Development of a Digital Marketing Plan for the upcoming movies: Trolls Band Together & The Exorcist Believer by Universal Pictures. For each movie, two digital marketing campaigns were designed, targeting different audiences, with a focus in the Spanish market.</div>
         <div class="skills w45">
           <span>Creative Strategy</span>
           <span>Digital Marketing</span>
@@ -63,7 +63,7 @@
           <h3>INTI & CO. BUSINESS DEVELOPMENT PLAN</h3>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
-        <div class="w45">Crafted the Business Development Plan for INTI & Co., a social enterprise aiming to bring Peru to the world by making sustainable fashion. The plan includes the brand identity, and a marketing and sales plan.</div>
+        <div class="dsc w45">Crafted the Business Development Plan for INTI & Co., a social enterprise aiming to bring Peru to the world by making sustainable fashion. The plan includes the brand identity, and a marketing and sales plan.</div>
         <div class="skills w45">
           <span>Brand Development</span>
           <span>Sales Planning</span>
@@ -76,7 +76,7 @@
           <h3>EDUCATION HUB BUSINESS PLAN</h3>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
-        <div class="w45">EDUCATION HUB is the go-to digital platform that connects universities and businesses, with the students at its core. The objective is to ensure a smooth transition between graduation and the labour market.</div>
+        <div class="dsc w45">EDUCATION HUB is the go-to digital platform that connects universities and businesses, with the students at its core. The objective is to ensure a smooth transition between graduation and the labour market.</div>
         <div class="skills w45">
           <span>Business Development</span>
           <span>Data Analysis</span>
@@ -89,7 +89,7 @@
           <h3>The Royal Production Company Mock-up</h3>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
-        <div class="w45">Website mock-up for The Royal Family Films, a creative production company based in Madrid. The goal was to simplify the image of the brand and enhance the accessibility to their work.<br><br>Find them at: https://royalproductioncompany.com/</div>
+        <div class="dsc w45">Website mock-up for The Royal Family Films, a creative production company based in Madrid. The goal was to simplify the image of the brand and enhance the accessibility to their work.<br><br>Find them at: https://royalproductioncompany.com/</div>
         <div class="skills w45">
           <span>Web Design (Adobe XD)</span>
           <span>User Interface</span>
