--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="navlinks">
       <a href="/" class="navlink current">Home</a>
       <a href="../projects" class="navlink">Projects</a>
-      <a href="#" class="navlink" style="display: none;">Experience</a>
+      <a href="../experience" class="navlink">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
     </div>
