--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     <div class="navlinks">
       <a href="/" class="navlink">Home</a>
       <a href="../projects" class="navlink current">Projects</a>
-      <a href="#" class="navlink" style="display: none;">Experience</a>
+      <a href="../experience" class="navlink">Experience</a>
       <a href="#" class="navlink" style="display: none;">Education</a>
       <div class="underline"></div>
     </div>
@@ -96,10 +96,7 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="footer">
-    <i class="fa-regular fa-asterisk"></i>Designed by <b>Andrés García Raffo</b><i class="fa-regular fa-asterisk"></i>
-  </div>
+  </div>  
   <!-- JS -->
   <script src="js/projects.js"></script>
 </body>
