--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <a href="mailto:agraffo23@gmail.com">AGRAFFO23@GMAIL.COM</a><br><br>
 
-      <a href="../CV_Andres_Garcia.pdf">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
+      <a href="../CV_Andres_Garcia.pdf" target="_blank">RESUME <i class="fa-solid fa-arrow-right"></i></a></div>
     </div>
     <!-- LOOPING TEXT -->
     <div class="container w100 m60">
