--- a/experience.html
+++ b/experience.html
@@ -2,9 +2,17 @@
 <html lang="en">
 
 <head>
-	<!-- IDK WHAT IT DOES EXACTLY -->
-	<meta charset="utf-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7G3QDH06YS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7G3QDH06YS');
+    </script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
