--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     gtag('config', 'G-7G3QDH06YS');
     </script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="title" content="Andres Garcia Raffo">
+    <meta name="description" content="I'm Andres and this is my portfolio. I'm an MSc in International Marketing & Brand Management graduate from Lund University. Feel free to reach out!">
+    <meta name="keywords" content="graduate, marketing, job hunting">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Andres Garcia Raffo</title>
     <!-- CSS -->
     <link href="css/index.css" rel="stylesheet">
